# talent-strategist-agent

./: .gitignore  CHEAT_SHEET.md  CLAUDE.md  LICENSE  Makefile  README.md  SETUP_GUIDE.md  agent.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: TEMPLATE_candidate.txt  TEMPLATE_role.txt  my_candidate.txt  my_role.txt  sample_candidate.txt  sample_candidate_2.txt  sample_candidate_3.txt  sample_role.txt
reports/: 20260701_153412_Talent_Strategist.md  20260701_171254_Talent_Strategist.md  20260705_180106_Sample_Candidate_scorecard.md  20260705_180243_Sample_Candidate_2_scorecard.md  20260705_180431_Sample_Candidate_3_scorecard.md  20260705_180443_COMPARISON_Talent_Strategist.md  20260705_225325_Talent_Strategist.md
talent_strategist/: __init__.py  __main__.py  candidates.py  cli.py  config.py  console.py  errors.py  llm.py  paths.py  pdf.py  pipeline.py  prompts.py  steps.py  storage.py
tests/: test_candidates.py  test_cli.py  test_pdf.py  test_steps.py
